# ray

./: CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
assets/: dr-hacker.ase  faculdade (Cópia).ase  faculdade.ase  ray attack.aseprite  ray run.aseprite  ray up.aseprite
assets/aseprite/: ray stop1.aseprite  ray-run-left.aseprite
assets/spritesheets/: ray-attack.json
scripts/: convert_assets.py
src/ray/: constants.py  level.py  main.py  platform.py  player.py
src/ray/assets/spritesheets/: ray-attack.json
