[tool.poetry]
name = "ray"
version = "0.1.0"
description = "ray e a sobrecarga"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "ray", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.11"
pygame = { version = ">=2.6.1,<3.0.0" }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
